[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shardedstore"
authors = [{name = "Matt McCormick", email = "matt.mccormick@kitware.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"

dependencies = [
    "zarr >=2.11.3",
]

[project.urls]
Home = "https://github.com/thewtex/sharedstore"

[project.optional-dependencies]
test = [
    "dask",
    "pytest >=2.7.3",
    "xarray-datatree >=0.0.5",
    "scipy",
]